{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 8,
  "lineage": "d10c0436-07c6-dabc-7368-dc2953627a38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-09d0073a5a7b8f4b8",
            "id": "rtb-09d0073a5a7b8f4b8",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "main-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "main-route-table",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-1297af56c06bf27b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "rtb-09d0073a5a7b8f4b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0313f262e09970092",
            "region": "us-east-1",
            "route_table_id": "rtb-09d0073a5a7b8f4b8",
            "subnet_id": "subnet-55bca25620c793704"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-3b1199609187574c4",
            "region": "us-east-1",
            "route_table_id": "rtb-09d0073a5a7b8f4b8",
            "subnet_id": "subnet-83728f833c810dfff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-cc511c9f8bb174ea2",
            "description": "Example security group for our VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-cc511c9f8bb174ea2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-security-group",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "example-security-group"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "example-security-group",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-1297af56c06bf27b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "sg-cc511c9f8bb174ea2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-55bca25620c793704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-55bca25620c793704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "private-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "private-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-1297af56c06bf27b4"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-55bca25620c793704",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-83728f833c810dfff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-83728f833c810dfff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "public-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-1297af56c06bf27b4"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-83728f833c810dfff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-1297af56c06bf27b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-4069b3ed83e65f65d",
            "default_route_table_id": "rtb-9fa9bd21e27d6cd71",
            "default_security_group_id": "sg-4047ff51c4c22d71a",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-1297af56c06bf27b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-9fa9bd21e27d6cd71",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Environment": "learning-terraform",
              "Name": "terraform-course"
            },
            "tags_all": {
              "Environment": "learning-terraform",
              "Managed_By": "Terraform",
              "Name": "terraform-course",
              "Project": "Terraform Training"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}